# Hackathon-2

Hackathon 2/phase-I/: .gitignore  README.md
Hackathon 2/phase-ll/: CLAUDE.md
Hackathon 2/phase-ll/.claude/: settings.local.json
Hackathon 2/phase-ll/backend/: VERIFICATION.md  init_db.py  requirements.txt  reset_db.py
Hackathon 2/phase-ll/frontend/: check-db.mjs  init-better-auth.js  middleware.ts  package-lock.json  package.json  tailwind.config.js
phase-I/: main.py  pyproject.toml
phase-I/.claude/agents/: todo-spec-reviewer.md
phase-I/history/prompts/console-todo-app/: 001-create-phase-i-specification.spec.prompt.md  003-generate-phase-i-task-breakdown.tasks.prompt.md
phase-I/history/prompts/constitution/: 001-create-project-constitution.constitution.prompt.md
phase-I/specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md
phase-I/src/cli/: main.py
phase-I/src/repository/: todo_repository.py
phase-I/src/services/: todo_service.py
phase-I/src/utils/: errors.py
phase-II (TodoApp)/.claude/: settings.local.json
phase-ll/: .gitignore  CALENDAR_ACCESS_GUIDE.md  CALENDAR_DEBUG.md  CALENDAR_FEATURE_SUMMARY.md  CALENDAR_FIX.md  CALENDAR_LINK_TROUBLESHOOTING.md  CALENDAR_SETUP_FINAL.md  DEPLOYMENT_FIX_COMPLETE.md  LOGOUT_BUTTON_LOCATION.md  VERCEL_DEPLOYMENT_FIX.md  check_database.py
phase-ll/.claude/: settings.local.json
phase-ll/backend/: .env.example  .gitignore  FINAL_STATUS.md  README.md  requirements.txt  run_migration.py  verify_migration.py
phase-ll/frontend/: next.config.ts  package-lock.json  package.json
(+206 files in other folders)
